ARM: tegra12: add clock preinit code for U-Boot
U-Boot doesn't setup clock as NVTBoot or fastboot, so clocks need to
be preinit before our normal clock init.

Bug 1482099

Change-Id: I5ad8dc7e61f1ad4864410a808c41298a91c7198f
Signed-off-by: Bryan Wu <pengw@nvidia.com>
Signed-off-by: Prabhu Kuttiyam <pkuttiyam@nvidia.com>
Reviewed-on: http://git-master/r/408427
(cherry picked from commit 6682ca58527e47fe6db40855d2deba48a6d321d3)
Reviewed-on: http://git-master/r/500873
Reviewed-by: Winnie Hsu <whsu@nvidia.com>

--- a/arch/arm/mach-tegra/Kconfig
+++ b/arch/arm/mach-tegra/Kconfig
@@ -593,6 +593,13 @@ config TEGRA_SLOW_CSITE
 	  When enabled, csite will be running at 1 Mhz and the performance of
 	  jtag, lauterbach and other debugger will be extremely slow.
 
+config TEGRA_PREINIT_CLOCKS
+	bool "Preinitialize Tegra clocks to known states"
+	default n
+	help
+	  Preinitialize Tegra clocks to known states before actual full-
+	  scale clock initialization starts.
+
 config TEGRA_PREPOWER_WIFI
 	bool "Pre-power up WiFi "
 	default n
