--- a/arch/arm/boot/dts/tegra124-platforms/tegra124-jetson_tk1-keys-pm375-0000-c00-00.dtsi
+++ b/arch/arm/boot/dts/tegra124-platforms/tegra124-jetson_tk1-keys-pm375-0000-c00-00.dtsi
@@ -9,6 +9,7 @@
 			label = "Power";
 			gpios = <&gpio TEGRA_GPIO(Q, 0) GPIO_ACTIVE_LOW>;
 			linux,code = <KEY_POWER>;
+			debounce-interval = <200>;
 			gpio-key,wakeup;
 		};
 	};
